--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <script src="models/movable_objects/character.class.js"></script>
     <script src="models/movable_objects/chicken.class.js"></script>
+    <script src="models/movable_objects/cloud.class.js"></script>
 
 
     <script src="models/world.class.js"></script>
