--- a/index.html
+++ b/index.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pollo Locco</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>El Polloo Locco</title>
 
-    <script src="models/drawable_objects/drawable_object.class.js"></script>
-    <script src="models/drawable_objects/movable_object.class.js"></script>
+  <link rel="stylesheet" href="style.css">
 
-    <script src="models/movable_objects/character.class.js"></script>
-    <script src="models/movable_objects/chicken.class.js"></script>
-    <script src="models/movable_objects/cloud.class.js"></script>
+  <script src="models/drawable-object.class.js"></script>
+  <script src="models/movableObject.class.js"></script>
+  <script src="models/character.class.js"></script>
+  <script src="models/chicken.class..js"></script>
+  <script src="models/cloud.class.js"></script>
+  <script src="models/status-bar.class.js"></script>
+  <script src="models/statusBar-Bottle.class.js"></script>
+  <script src="models/statusBar-Coin.class.js"></script>
+  <script src="models/world.class.js"></script>
+  <script src="models/background-object.class.js"></script>
+  <script src="models/keyboard.class.js"></script>
+  <script src="models/level.class.js"></script>
+  <script src="models/endboss.class.js"></script>
+
+  <script src="levels/level1.js"></script>
+
+  <script src="models/throwable-object.class.js"></script>
 
 
-    <script src="models/world.class.js"></script>
-    <script src="java_script/game.js"></script>
+  <script src="java_script/game.js"></script>
 
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body onload="init()">
-    <h1>El Pollo Locco</h1>
-    <canvas id="canvas" width="720" height="480"></canvas>
-  </body>
+
+
+</head>
+
+<body onload="init()">
+  
+<h1>Ell Pollo Locco</h1>
+
+<canvas id="canvas" width="720" height="480">
+
+</canvas>
+
+
+</body>
 </html>
