--- a/index.html
+++ b/index.html
@@ -7,23 +7,27 @@
 
   <link rel="stylesheet" href="style.css">
 
-  <script src="models/drawable-object.class.js"></script>
-  <script src="models/movableObject.class.js"></script>
-  <script src="models/character.class.js"></script>
-  <script src="models/chicken.class..js"></script>
-  <script src="models/cloud.class.js"></script>
-  <script src="models/status-bar.class.js"></script>
-  <script src="models/statusBar-Bottle.class.js"></script>
-  <script src="models/statusBar-Coin.class.js"></script>
+  <script src="models/drawable_object/drawable_object.class.js"></script>
+  <script src="models/drawable_object/movableObject.class.js"></script>
+  <script src="models/drawable_object/statusBar.class.js"></script>
+
+  <script src="models/movable_object/character.class.js"></script>
+  <script src="models/movable_object/chicken.class..js"></script>
+  <script src="models/movable_object/endboss.class.js"></script>
+  <script src="models/movable_object/cloud.class.js"></script>
+  <script src="models/movable_object/background-object.class.js"></script>
+  <script src="models/movable_object/throwable-object.class.js"></script>
+
+  <script src="models/statusBar/statusBar_Health.class.js"></script>
+  <script src="models/statusBar/statusBar_Bottle.class.js"></script>
+  <script src="models/statusBar/statusBar_Coin.class.js"></script>
+
   <script src="models/world.class.js"></script>
-  <script src="models/background-object.class.js"></script>
   <script src="models/keyboard.class.js"></script>
   <script src="models/level.class.js"></script>
-  <script src="models/endboss.class.js"></script>
 
   <script src="levels/level1.js"></script>
 
-  <script src="models/throwable-object.class.js"></script>
 
 
   <script src="java_script/game.js"></script>
