start adding CollectableObject

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="models/drawable_object/drawable_object.class.js"></script>
   <script src="models/drawable_object/movableObject.class.js"></script>
   <script src="models/drawable_object/statusBar.class.js"></script>
+  <script src="models/drawable_object/collectable_object.class.js"></script>
 
   <script src="models/movable_object/character.class.js"></script>
   <script src="models/movable_object/chicken.class..js"></script>
