--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <script src="models/movable_object/background-object.class.js"></script>
   <script src="models/movable_object/throwable-object.class.js"></script>
 
+  <script src="models/collectable_object/collectable_coin.class.js"></script>
+  <script src="models/collectable_object/collectable_bottle.class.js"></script>
+
   <script src="models/statusBar/statusBar_Health.class.js"></script>
   <script src="models/statusBar/statusBar_Bottle.class.js"></script>
   <script src="models/statusBar/statusBar_Coin.class.js"></script>
