--- a/index.html
+++ b/index.html
@@ -1,51 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>El Polloo Locco</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<title>El Polloo Locco</title>
 
-  <link rel="stylesheet" href="style.css">
+		<link
+			rel="stylesheet"
+			href="style.css"
+		/>
 
-  <script src="models/drawable_object/drawable_object.class.js"></script>
-  <script src="models/drawable_object/movableObject.class.js"></script>
-  <script src="models/drawable_object/statusBar.class.js"></script>
-  <script src="models/drawable_object/collectable_object.class.js"></script>
+		<script src="models/drawable_object/drawable_object.class.js"></script>
+		<script src="models/drawable_object/movableObject.class.js"></script>
+		<script src="models/drawable_object/statusBar.class.js"></script>
+		<script src="models/drawable_object/collectable_object.class.js"></script>
 
-  <script src="models/movable_object/character.class.js"></script>
-  <script src="models/movable_object/chicken.class..js"></script>
-  <script src="models/movable_object/endboss.class.js"></script>
-  <script src="models/movable_object/cloud.class.js"></script>
-  <script src="models/movable_object/background-object.class.js"></script>
-  <script src="models/movable_object/throwable-object.class.js"></script>
+		<script src="models/movable_object/character.class.js"></script>
+		<script src="models/movable_object/chicken.class..js"></script>
+		<script src="models/movable_object/endboss.class.js"></script>
+		<script src="models/movable_object/cloud.class.js"></script>
+		<script src="models/movable_object/background-object.class.js"></script>
+		<script src="models/movable_object/throwable-object.class.js"></script>
 
-  <script src="models/collectable_object/collectable_coin.class.js"></script>
-  <script src="models/collectable_object/collectable_bottle.class.js"></script>
+		<script src="models/collectable_object/collectable_coin.class.js"></script>
+		<script src="models/collectable_object/collectable_bottle.class.js"></script>
 
-  <script src="models/statusBar/statusBar_Health.class.js"></script>
-  <script src="models/statusBar/statusBar_Bottle.class.js"></script>
-  <script src="models/statusBar/statusBar_Coin.class.js"></script>
+		<script src="models/statusBar/statusBar_Health.class.js"></script>
+		<script src="models/statusBar/statusBar_Bottle.class.js"></script>
+		<script src="models/statusBar/statusBar_Coin.class.js"></script>
 
-  <script src="models/world.class.js"></script>
-  <script src="models/keyboard.class.js"></script>
-  <script src="models/level.class.js"></script>
+		<script src="models/world.class.js"></script>
+		<script src="models/keyboard.class.js"></script>
+		<script src="models/level.class.js"></script>
 
-  <script src="levels/level1.js"></script>
+		<script src="levels/level1.js"></script>
 
-  <script src="java_script/game.js"></script>
+		<script src="java_script/game.js"></script>
+	</head>
 
-
-
-</head>
-
-<body onload="init()">
-  
-<h1>Ell Pollo Locco</h1>
-
-<canvas id="canvas" width="720" height="480">
-
-</canvas>
-
-
-</body>
+	<body onload="init()">
+		<h1>Ell Pollo Locco</h1>
+		<div id="game">
+			<canvas
+				id="canvas"
+				width="720"
+				height="480"
+			>
+			</canvas>
+		</div>
+	</body>
 </html>
