--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 		<script src="java_script/game.js"></script>
 	</head>
 
-	<body onload="init()">
+	<body>
 		<h1>Ell Pollo Locco</h1>
-		<div id="game">
+		<div id="gameScreen" class="d_none">
 			<canvas
 				id="canvas"
 				width="720"
