start adding background in css  and html

--- a/index.html
+++ b/index.html
@@ -42,14 +42,24 @@
 	</head>
 
 	<body>
-		<h1>Ell Pollo Locco</h1>
-		<div id="gameScreen" class="d_none">
-			<canvas
-				id="canvas"
-				width="720"
-				height="480"
+		<section class="background">
+			
+			<h1>Ell Pollo Locco</h1>
+
+			<div
+				id="gameScreen"
+				class="d_none"
 			>
-			</canvas>
-		</div>
+				<canvas
+					id="canvas"
+					width="720"
+					height="480"
+				>
+				</canvas>
+			</div>
+			<div id="gameText">
+				<p>hier steht was was macht</p>
+			</div>
+		</section>
 	</body>
 </html>
