add some styling

--- a/index.html
+++ b/index.html
@@ -43,22 +43,31 @@
 		<section class="background">
 			<h1>Ell Pollo Locco</h1>
 
-			<div
-				id="gameScreen"
-				class="d_none">
-				<div
-					id="overlayGameScreen"
-					class="overlay_game_screen"></div>
 
 				<canvas
+					class="d_none"
 					id="canvas"
 					width="720"
 					height="480">
 				</canvas>
-			</div>
+	
+			
+				<div
+					id="overlayGameScreen"
+					class="overlay_game_screen">
+					<h3>el pollo Locco, your favorite BorwserGame</h3>
+					<p>press P to Play</p>
+				</div>
 
-			<div id="overlayGameText" class="overlay_game_text">
-				<p>hier steht was was macht</p>
+			<div
+				id="overlayGameText"
+				class="overlay_game_text">
+				<p>use Arrow Right and Left to move</p>
+				<p>Space for jump</p>
+				<p>SMASH! hit jump on a Chicken</p>
+				<p>Press D to throw a Bottle</p>
+				<p>press p for a Quickstart</p>
+				<p>press R to reload and start a new Game</p>
 			</div>
 		</section>
 	</body>
