add statusBar Endboss

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<script src="models/statusBar/statusBar_Health.class.js"></script>
 		<script src="models/statusBar/statusBar_Bottle.class.js"></script>
 		<script src="models/statusBar/statusBar_Coin.class.js"></script>
+		<script src="models/statusBar/statusBar_Endboss.class.js"></script>
 
 		<script src="models/world.class.js"></script>
 		<script src="models/keyboard.class.js"></script>
