add lost screen

--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
 			</div>
 
 			<div
+				id="overlayGameScreenLOST"
+				class="overlay_game_screen_lost d_none">
+				<h3>Congratulations you WON</h3>
+				<p>press R to Reload the Game</p>
+			</div>
+
+			<div
 				id="overlayGameText"
 				class="overlay_game_text">
 				<p>use Arrow Right and Left to move</p>
