--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 		<link
 			rel="stylesheet"
 			href="style.css" />
+			<style>
+				@font-face {
+					font-family: "zabras";
+					src: url('fonts/zabars.ttf') format(truetype);
+				}
+			</style>
+
 
 		<script src="models/drawable_object/drawable_object.class.js"></script>
 		<script src="models/drawable_object/movableObject.class.js"></script>
@@ -68,7 +75,7 @@
 			<div
 				id="overlayGameScreenLOST"
 				class="overlay_game_screen_lost d_none">
-				<h3>Congratulations you WON</h3>
+				<h3>Oh No you Lost the game</h3>
 				<p>press R to Reload the Game</p>
 			</div>
 
