--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 			<div
 				id="overlayGameScreen"
 				class="overlay_game_screen">
-				<h3>el pollo Locco, your favorite BorwserGame</h3>
-				<p>press P to Play</p>
+				<h4>press P to Play</h4>
 			</div>
 
 			<div
