--- a/index.html
+++ b/index.html
@@ -67,26 +67,28 @@
 			<div
 				id="overlayGameScreenWON"
 				class="overlay_game_screen_won d_none">
-				<h3>Congratulations you WON</h3>
-				<p>press R to Reload the Game</p>
+				<h4>press R to Reload the Game</h4>
 			</div>
 
 			<div
 				id="overlayGameScreenLOST"
 				class="overlay_game_screen_lost d_none">
-				<h3>Oh No you Lost the game</h3>
-				<p>press R to Reload the Game</p>
+				<h4>press R to Reload the Game</h4>
 			</div>
 
 			<div
 				id="overlayGameText"
 				class="overlay_game_text">
-				<p>use Arrow Right and Left to move</p>
-				<p>Space for jump</p>
-				<p>SMASH! hit jump on a Chicken</p>
-				<p>Press D to throw a Bottle</p>
-				<p>press p for a Quickstart</p>
-				<p>press R to reload and start a new Game</p>
+				<div class="overlay_game_text_col">
+					<p>use Arrow Right and Left to move</p>
+					<p>Space for jump</p>
+					<p>SMASH! hit jump on a Chicken</p>
+				</div>
+				<div class="overlay_game_text_col">
+					<p>Press D to throw a Bottle</p>
+					<p>press R to reload and start a new Game</p>
+					<p>press p for a Quickstart</p>
+				</div>
 			</div>
 		</section>
 	</body>
