--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
 				id="overlayGameText"
 				class="overlay_game_text">
 				<div class="overlay_game_text_col">
-					<p>use Arrow Right and Left to move</p>
-					<p>Space for jump</p>
-					<p>SMASH! hit jump on a Chicken</p>
+					<p>use Arrow 'Right' and 'Left' to move</p>
+					<p>'Space' for jump</p>
+					<p>SMASH! 'jump' on a Chicken</p>
 				</div>
 				<div class="overlay_game_text_col">
-					<p>Press D to throw a Bottle</p>
-					<p>press R to reload and start a new Game</p>
-					<p>press p for a Quickstart</p>
+					<p>Press 'D' to throw a Bottle</p>
+					<p>press 'R' to reload and start a new Game</p>
+					<p>press 'P' for a Quickstart</p>
 				</div>
 			</div>
 		</section>
