--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 		<link
 			rel="stylesheet"
 			href="style.css" />
-			<style>
-				@font-face {
-					font-family: "zabras";
-					src: url('fonts/zabars.ttf') format(truetype);
-				}
-			</style>
-
+		<style>
+			@font-face {
+				font-family: 'zabras';
+				src: url('fonts/zabars.ttf') format(truetype);
+			}
+		</style>
 
 		<script src="models/drawable_object/drawable_object.class.js"></script>
 		<script src="models/drawable_object/movableObject.class.js"></script>
@@ -49,7 +48,8 @@
 
 	<body>
 		<section class="background">
-			<h1>Ell Pollo Locco</h1>
+			
+			<h1>El Pollo Locco</h1>
 
 			<canvas
 				class="d_none"
@@ -58,25 +58,25 @@
 				height="480">
 			</canvas>
 
-			<div
+			<article
 				id="overlayGameScreen"
 				class="overlay_game_screen">
 				<h4>press P to Play</h4>
-			</div>
+			</article>
 
-			<div
+			<article
 				id="overlayGameScreenWON"
 				class="overlay_game_screen_won d_none">
 				<h4>press R to Reload the Game</h4>
-			</div>
+			</article>
 
-			<div
+			<article
 				id="overlayGameScreenLOST"
 				class="overlay_game_screen_lost d_none">
 				<h4>press R to Reload the Game</h4>
-			</div>
+			</article>
 
-			<div
+			<article
 				id="overlayGameText"
 				class="overlay_game_text">
 				<div class="overlay_game_text_col">
@@ -84,12 +84,28 @@
 					<p>'Space' for jump</p>
 					<p>SMASH! 'jump' on a Chicken</p>
 				</div>
+				
 				<div class="overlay_game_text_col">
 					<p>Press 'D' to throw a Bottle</p>
 					<p>press 'R' to reload and start a new Game</p>
 					<p>press 'P' for a Quickstart</p>
 				</div>
-			</div>
+			</article>
 		</section>
+
+		<article
+			id="orientationWarning"
+			class="orientation-warning">
+			<p>For the best game experience, please rotate your device.</p>
+		</article>
+
+		<article id="gameButtons" class="game_buttons" >
+
+			<div>button left</div>
+			<div>button jump</div>
+			<div>button right</div>
+			<div>button throw</div>
+
+		</article>
 	</body>
 </html>
