--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 		<script src="models/world.class.js"></script>
 		<script src="models/keyboard.class.js"></script>
+		<script src="models/audioManager.class.js"></script>
 		<script src="models/level.class.js"></script>
 
 		<script src="levels/level1.js"></script>
