change text for p

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 				<div class="overlay_game_text_col">
 					<p>Press 'D' to throw a Bottle</p>
-					<p>press 'P' to a start the Game</p>
+					<p>press 'P' to start & quickstart the Game</p>
 					<p>press 'R' to reload and start a new Game</p>
 				</div>
 			</article>
