fix play button

--- a/index.html
+++ b/index.html
@@ -88,12 +88,11 @@
 		</div>
 
 		<section class="background">
-			<h1>El Pollo Locco</h1>
+			<h1>El Pollo Loco</h1>
 
 			<canvas class="d_none" id="canvas" width="720" height="480"> </canvas>
 
 			<article id="overlayGameScreen" class="overlay_game_screen">
-				<h4>press P to Play</h4>
 				<button
 					class="overlay_btn overlay_btn_play"
 					type="button"
@@ -103,12 +102,10 @@
 			</article>
 
 			<article id="overlayGameScreenWON" class="overlay_game_screen_won d_none">
-				<h4>press R to Reload the Game</h4>
 				<button class="overlay_btn overlay_btn_reload" type="button" onclick="window.location.reload();">Reload</button>
 			</article>
 
 			<article id="overlayGameScreenLOST" class="overlay_game_screen_lost d_none">
-				<h4>press R to Reload the Game</h4>
 				<button class="overlay_btn overlay_btn_reload" type="button" onclick="window.location.reload();">Reload</button>
 			</article>
 
