--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>El Polloo Locco</title>
+		<link rel="shortcut icon" href="img/buttons/favicon.png" type="image/x-icon">
+		<title>El Polloo Loco</title>
 
 		<link rel="stylesheet" href="style.css" />
 		<style>
@@ -45,7 +46,7 @@
 
 	<body>
 		<article id="orientationWarning" class="orientation-warning">
-			<p>For the best game experience, please rotate your device.</p>
+			<p>For the best Game experience, <br> please rotate your Device.</p>
 		</article>
 
 		<!-- Linke Seite: Bewegung -->
@@ -72,17 +73,6 @@
 
 		<section class="background">
 			<h1>El Pollo Loco</h1>
-
-			<!-- <button
-				id="audioToggleBtn"
-				class="audio_toggle"
-				type="button"
-				tabindex="-1"
-				onkeydown="event.preventDefault();"
-				onclick="toggleAudio(this)">
-				<span id="audioLabelOn" class="d_none">Audio on</span>
-				<span id="audioLabelOff">Audio off</span>
-			</button> -->
 
 			<button class="audio_toggle" type="button">
 				<span data-audio-state="on">Sound an</span>
