fix context menu on buttons

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 				<button
 					class="overlay_btn overlay_btn_play"
 					type="button"
+					oncontextmenu="return false;"
 					onclick="init(); document.getElementById('overlayGameScreen').classList.add('d_none'); document.getElementById('canvas').classList.remove('d_none');">
 					Play
 				</button>
@@ -116,6 +117,7 @@
 				<button
 					class="overlay_btn overlay_btn_reload"
 					type="button"
+					oncontextmenu="return false;"
 					onclick="init(); document.getElementById('overlayGameScreen').classList.add('d_none'); document.getElementById('overlayGameScreenWON').classList.add('d_none'); document.getElementById('overlayGameScreenLOST').classList.add('d_none'); document.getElementById('canvas').classList.remove('d_none');">
 					Reload
 				</button>
@@ -125,6 +127,7 @@
 				<button
 					class="overlay_btn overlay_btn_reload"
 					type="button"
+					oncontextmenu="return false;"
 					onclick="init(); document.getElementById('overlayGameScreen').classList.add('d_none'); document.getElementById('overlayGameScreenWON').classList.add('d_none'); document.getElementById('overlayGameScreenLOST').classList.add('d_none'); document.getElementById('canvas').classList.remove('d_none');">
 					Reload
 				</button>
